<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MenuFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/title_main"
        android:textAlignment="center"
        android:textColor="?attr/colorPrimary"
        android:textSize="64sp"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="119dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="50dp">

        <Button
            android:id="@+id/btn_base_layers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_type_base_layer" />

        <Button
            android:id="@+id/btn_mixins"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_type_mixin" />

        <Button
            android:id="@+id/btn_condiments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_type_condiment" />

        <Button
            android:id="@+id/btn_seasonings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_type_seasoning" />

        <Button
            android:id="@+id/btn_shells"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_type_shell" />

        <Button
            android:id="@+id/btn_taco"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/red_dark"
            android:text="@string/label_btn_to_taco_fragment" />

        <Button
            android:id="@+id/btn_my_tacos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_my_tacos" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>