<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".fragments.TacosFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|top"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/title_taco_randomizer"
            android:textColor="?attr/colorPrimary"
            android:textSize="36sp" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_margin="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tacos_base_layer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_type_base_layer"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tacos_mixin_pretext" />

            <TextView
                android:id="@+id/tacos_mixin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_type_mixin"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tacos_condiment_pretext" />

            <TextView
                android:id="@+id/tacos_condiment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_type_condiment"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tacos_seasoning_pretext" />

            <TextView
                android:id="@+id/tacos_seasoning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_type_seasoning"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tacos_shell_pretext" />

            <TextView
                android:id="@+id/tacos_shell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_type_shell"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

        </LinearLayout>


        <Button
            android:id="@+id/btn_get_random_taco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_get_random_taco" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/shape_heart" />
</FrameLayout>